--- a/clinic/css/style.css
+++ b/clinic/css/style.css
@@ -29,3 +29,15 @@ body {
   font-weight: bold;
   font-size: 1.4rem;
 }
+
+.mainvisual {
+  
+}
+
+.left-box {
+  writing-mode: vertical-rl;
+}
+
+.right-box {
+  
+}
