--- a/clinic/css/style.css
+++ b/clinic/css/style.css
@@ -70,16 +70,18 @@ body {
 /* コンセプト */
 .concept {
   display: flex;
+  width: 100%;
   justify-content: center;
   margin-top: 120px;
-  background-image: url("/clinic/images/Title.png"),url("/clinic/images/BGicon-big.png");
-  background-repeat: no-repeat;
-  background-size: 530px 130px,440px 336px;
-  background-position: top left,right;
 }
 
 .concept-left {
   width: 320px;
+  background-image: url("/clinic/images/Title.png");
+  background-clip: border-box;
+  background-repeat: no-repeat;
+  background-size: 530px 130px;
+  background-position-x: center;
 }
 
 .concept-right {
@@ -87,7 +89,12 @@ body {
   width: 400px;
   height: 507px;
   margin-left: 80px;
-  
+  position: relative;
+  background-image: url("/clinic/images/BGicon-big.png");
+  background-repeat: no-repeat;
+  background-size: 440px 336px;
+  background-position-x: 50px;
+  background-position-y: bottom;
 }
 
 .treatment1 {
@@ -96,7 +103,9 @@ body {
   align-self: flex-end;
   position: absolute;
   border-radius: 20px;
-  bottom: ;
+  top: -61px;
+  right: 65px;
+  z-index: 1;
 }
 
 .treatment2 {
@@ -113,18 +122,20 @@ body {
   align-self: flex-end;
   position: absolute;
   border-radius: 20px;
+  right: 0;
+  bottom: 61px;
 }
 
 /* コース・料金 */
 .course-price {
   height: 1000px;
   width: 100%;
-  background: #F0F5E1;
+  /* background: #F0F5E1; */
   
 }
 
 .bg-img-middle {
-  
+  width: 100%;
 }
 
 .bg-img-middle::before,.bg-img-middle::after{
